<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_gravity="center"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:background="@drawable/shape_common_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp36"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/email" />

            <TextView
                android:layout_width="@dimen/dp127"
                android:layout_height="match_parent"
                android:layout_marginLeft="42dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textColor="@color/blue"
                android:textIsSelectable="true"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp36"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/phone" />

            <TextView
                android:layout_width="@dimen/dp127"
                android:layout_height="match_parent"
                android:layout_marginLeft="42dp"
                android:gravity="center_vertical"
                android:text="@string/phone"
                android:textColor="@color/blue"
                android:textIsSelectable="true"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp36"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@mipmap/qq" />

            <TextView
                android:layout_width="@dimen/dp127"
                android:layout_height="match_parent"
                android:layout_marginLeft="44dp"
                android:gravity="center_vertical"
                android:text="@string/qq"
                android:textColor="@color/blue"
                android:textIsSelectable="true"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@mipmap/close" />

    </LinearLayout>

</FrameLayout>